infra/k8s-prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true" 
spec:
  ingressClassName: nginx
  rules:
    - host: www.ticketing-shop-staging.xyz
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-service
                port:
                  number: 4000
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: auth-service
                port: 
                  number: 4000
          - path: /api/tickets/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: tickets-service
                port: 
                  number: 4000
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-service
                port:
                  number: 4000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: next-client-service
                port:
                  number: 3000

---

apiVersion: v1
kind: Service
metadata: 
  annotations: 
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true' 
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.ticketing-shop-staging.xyz' 
  labels: 
    helm.sh/chart: ingress-nginx-2.0.3 
    app.kubernetes.io/name: ingress-nginx 
    app.kubernetes.io/instance: ingress-nginx 
    app.kubernetes.io/version: 0.32.0 
    app.kubernetes.io/managed-by: Helm 
    app.kubernetes.io/component: controller 
  name: ingress-nginx-controller 
  namespace: ingress-nginx
spec: 
  type: LoadBalancer 
  externalTrafficPolicy: Local 
  ports: 
    - name: http 
      port: 80 
      protocol: TCP 
      targetPort: http
    - name: https 
      port: 443 
      protocol: TCP 
      targetPort: https 
  selector: 
    app.kubernetes.io/name: ingress-nginx 
    app.kubernetes.io/instance: ingress-nginx 
    app.kubernetes.io/component: controller
